--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Ever young is a website  for Ever young minded people in Germany Eurpe">
+    <meta name="keywords" content="looking young, anti-aging, natural products, organic products, exercise, meditation,  massaging Germany, Europ">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Ever young</title>
 </head>
 <body>
     
