Add markup for main section

--- a/index.html
+++ b/index.html
@@ -34,15 +34,26 @@
             </nav>
         </header>
 
-
-
-
-
-
-
         <section>
-            main section
-        </section>
+            <div class="main">
+                <div class="main-left">
+                    <h1 id="main">Everything you need to know <br>how to be in good health and <br>remain Young. </h1>
+                    <p id="para"> <span>Ever young</span> site is for people who want to remain ever young,<br>
+                        (anti-aging) or want to reverse aging, prevent premature aging , <br>stop aging process with
+                        organic means and natural products.
+                    </p>
+                    <div class="button">
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+                <div class="main-right">
+                    <img src="./assets/images/foodbg-removebg-preview (1).png">
+                </div>
+            </div>
+    </div>
+    </section>
+
+
         <section>
             about page
         </section>
