Add markup to the about  section

--- a/index.html
+++ b/index.html
@@ -53,10 +53,60 @@
     </div>
     </section>
 
+    <section class="sec-about">
+        <h1><strong>About Ever Young</strong></h1>
+        <h3> <i>what we do</i></h3>
+        <div class="about-wrap">
+            <div class="about-1">
+                <div class="about-img">
+                    <img src="./images/meet.jpg" class="image-left">
+                </div>
+                <div class="about-right">
+                    <h1>We give transparent Advice <br>on health Issues.</h1>
+                    <p> <span>Ever young</span> customers get a first hand advice or recomended
+                        <br> products through our team. We don't just tell what you should<br>eat or do but show you
+                        how to do it. At Ever young we ....
+                    </p>
+                    <div class="button-about">
+                        <a href="#" class="btn-about">read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="about-2">
+                <div class="about-center">
+                    <h1>We give transparent Advice <br>on health Issues.</h1>
+                    <p> <span>Ever young</span> customers get a first hand advice or recomended
+                        <br> products through our team. We don't just tell what you should<br>eat or do but show you
+                        how to do it. At Ever young we ....
+                    </p>
+                    <div class="button-center">
+                        <a href="#" class="btn-about">read more</a>
+                    </div>
+                </div>
+                <div class="about-img-center">
+                    <img src="./images/meet.jpg" class="image-right-center">
+                </div>
+            </div>
+            <div class="about-1">
+                <div class="about-img">
+                    <img id="img3" src="./images/meet.jpg" class="image-left">
+                </div>
+                <div class="about-right">
+                    <h1 id="text3">We give transparent Advice <br>on health Issues.</h1>
+                    <p> <span>Ever young</span> customers get a first hand advice or recomended
+                        <br> products through our team. We don't just tell what you should<br>eat or do but show you
+                        how to do it. At Ever young we ....
+                    </p>
+                    <div class="button-about">
+                        <a href="#" class="btn-about">read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <section>
-            about page
-        </section>
+
+        
 
         <footer>
             social media
