syle about section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="about-wrap">
             <div class="about-1">
                 <div class="about-img">
-                    <img src="./images/meet.jpg" class="image-left">
+                    <img src="./assets/images/meet.jpg" class="image-left">
                 </div>
                 <div class="about-right">
                     <h1>We give transparent Advice <br>on health Issues.</h1>
@@ -84,12 +84,12 @@
                     </div>
                 </div>
                 <div class="about-img-center">
-                    <img src="./images/meet.jpg" class="image-right-center">
+                    <img src="./assets/images/meet.jpg" class="image-right-center">
                 </div>
             </div>
             <div class="about-1">
                 <div class="about-img">
-                    <img id="img3" src="./images/meet.jpg" class="image-left">
+                    <img id="img3" src="./assets/images/meet.jpg" class="image-left">
                 </div>
                 <div class="about-right">
                     <h1 id="text3">We give transparent Advice <br>on health Issues.</h1>
