syle about section continus..

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <div class="about-2">
                 <div class="about-center">
                     <h1>We give transparent Advice <br>on health Issues.</h1>
-                    <p> <span>Ever young</span> customers get a first hand advice or recomended
-                        <br> products through our team. We don't just tell what you should<br>eat or do but show you
-                        how to do it. At Ever young we ....
+                    <p> <span>Ever Young</span> had help so many people by reducing  the risk of
+                        <br> of cancer, heart attack, diabetic, promote their youthfullness <br>Simple by follwing simple instructionon how to mix or
+                        blending<br> one or more products.
                     </p>
                     <div class="button-center">
                         <a href="#" class="btn-about">read more</a>
