Style about section continues

--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
             </div>
             <div class="about-2">
                 <div class="about-center">
-                    <h1>We give transparent Advice <br>on health Issues.</h1>
-                    <p> <span>Ever Young</span> had help so many people by reducing  the risk of
-                        <br> of cancer, heart attack, diabetic, promote their youthfullness <br>Simple by follwing simple instructionon how to mix or
-                        blending<br> one or more products.
+                    <h1>Go organic and Nature.</h1>
+                    <p> <span>Ever Young</span> had help so many people in reducing  their risk of
+                        <br> of cancer, heart attack, diabetic, or promote their youthfullness <br>Simple by follwing simple instructions on  how to mix or
+                        blend<br> one or more products.
                     </p>
                     <div class="button-center">
                         <a href="#" class="btn-about">read more</a>
                     </div>
                 </div>
                 <div class="about-img-center">
-                    <img src="./assets/images/meet.jpg" class="image-right-center">
+                    <img src="./assets/images/oraganic prodk1.png" class="image-right-center">
                 </div>
             </div>
             <div class="about-1">
                 <div class="about-img">
-                    <img id="img3" src="./assets/images/meet.jpg" class="image-left">
+                    <img id="img3" src="./assets/images/supplement1.jpg" class="image-left">
                 </div>
                 <div class="about-right">
-                    <h1 id="text3">We give transparent Advice <br>on health Issues.</h1>
-                    <p> <span>Ever young</span> customers get a first hand advice or recomended
-                        <br> products through our team. We don't just tell what you should<br>eat or do but show you
-                        how to do it. At Ever young we ....
+                    <h1 id="text3">Supplement your food.</h1>
+                    <p> <span>It is best Practice </span>to supplement your meal or food you eat
+                        <br> due to the fact that we cannot get all the nuritents required in a<br> given meal.
+                         There are supplement products we  recommend....
                     </p>
                     <div class="button-about">
                         <a href="#" class="btn-about">read more</a>
