--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                 <h3>follow us </h3>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
                 aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-                <a href="#"> you Tube </a>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
                 <a href="https://facebook.com" target="_blank" rel="noopener"
                 aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
                 <a href="https://twitter.com" target="_blank" rel="noopener"
