fix: the image in contact page..

--- a/signup.html
+++ b/signup.html
@@ -33,6 +33,7 @@
                 </nav>
             </header>
             <section class="form-section">
+                <img src="./assets/images/pexels-ketut-subiyanto-4126799-removebg-preview-removebg-preview.png" class="sig-image">
                 <form method="POST" action="#" class="signup-form">
                     <h2>signup for our newsletter!</h2>
                     <label for="fname">First Name</label>
