--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html" aria-label="Go to the top of the page">Home<a /></li>
                     <li><a href="#about" aria-label="Go to the about us page">About<a /></li>
-                    <li><a href="#blog.html" aria-label="Go to Blog and get Tips">Blog<a /></li>
+                    <li><a href="blog.html" aria-label="Go to Blog and get Tips">Blog<a /></li>
                     <li><a href="signup.html" class="active" aria-label="Go to the contact page and signup">Contact
                             Us<a /></li>
                 </ul>
