--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,6 @@
                 </div>
                 <ul>
                     <li><a href="index.html" aria-label="Go to the top of the page">Home<a /></li>
-                    <li><a href="#about" aria-label="Go to the about us page">About<a /></li>
                     <li><a href="#blog.html"class="active" aria-label="Go to Blog and get Tips">Blog<a /></li>
                     <li><a href="signup.html"  aria-label="Go to the contact page and signup">Contact
                             Us<a /></li>
@@ -35,7 +34,7 @@
             </nav>
         </header>
         <div class="header">
-            <img src="./assets/images/fooblog1.jpg" style="width: 100%; height: 120px;">
+            <img src="./assets/images/beachblog2.png">
             <h2>My Blog</h2>
           </div>
           
