Style the main section of Blog

--- a/blog.html
+++ b/blog.html
@@ -27,40 +27,100 @@
                 </div>
                 <ul>
                     <li><a href="index.html" aria-label="Go to the top of the page">Home<a /></li>
-                    <li><a href="#blog.html"class="active" aria-label="Go to Blog and get Tips">Blog<a /></li>
-                    <li><a href="signup.html"  aria-label="Go to the contact page and signup">Contact
+                    <li><a href="#blog.html" class="active" aria-label="Go to Blog and get Tips">Blog<a /></li>
+                    <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact
                             Us<a /></li>
                 </ul>
             </nav>
         </header>
-        <div class="header">
+        <div class="header-blog">
             <img src="./assets/images/beachblog2.png">
             <h2>My Blog</h2>
-          </div>
-          
-          
-    <div class="footer-medias">
+        </div>
 
-        <hr>
-        <a href="https://instagram.com" target="_blank" rel="noopener"
-            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-        <a href="https://youtube.com" target="_blank" rel="noopener"
-            aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-        <a href="https://facebook.com" target="_blank" rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com" target="_blank" rel="noopener"
-            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        <div class="row-blog">
+            <div class="leftcolumn-blog">
+                <div class="main-blog left-blog1">
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Dec 7, 2017</h5>
+                    <div class="blog-img">Image
+                        <img src="./assets/images/lemon1.png">
+                    </div>
+                    <p>Some text..</p>
+                </div>
+                <div class="main-blog left-blog2">
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Sep 2, 2017</h5>
+                    <div class="blog-img">Image
+                        <img src="./assets/images/lemon1.png">
+                    </div>
+                    <p>Some text..</p>
+                </div>
+                <div class="main-blog left-blogcenter">
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Sep 2, 2017</h5>
+                    <div class="blog-img">Image</div>
+                    <p>Some text..</p>
+                </div>
+                <div class="main-blog left-blog1">
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Dec 7, 2017</h5>
+                    <div class="blog-img">Image</div>
+                    <p>Some text..</p>
+                </div>
+                <div class="main-blog left-blog2">
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Sep 2, 2017</h5>
+                    <div class="blog-img">Image</div>
+                    <p>Some text..</p>
+                </div>
+            </div>
+            <div class="rightcolumn-blog">
+                <div class="main-blog">
+                    <h2>About Me</h2>
+                    <div class="blog-img">Image</div>
+                    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+                </div>
+                <div class="main-blog">
+                    <h3>Popular Post</h3>
+                    <div class="blog-img">Image</div><br>
+                    <div class="blog-img">Image</div><br>
+                    <div class="blog-img">Image</div>
+                </div>
+                <div class="main-blog">
+                    <h3>Follow Me</h3>
+                    <p>Some text..</p>
+                </div>
+            </div>
+        </div>
 
-        <hr>
-        <p></p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-    </div>
+        <div class="footer">
+            <h2>Footer</h2>
+        </div>
+
+
+        <div class="footer-medias">
+
+            <hr>
+            <a href="https://instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            <a href="https://youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+
+            <hr>
+            <p></p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+        </div>
 
 
 
 
-    </footer>
-    <!---add fontawsone kit--->
-    <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+        </footer>
+        <!---add fontawsone kit--->
+        <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
 
 
