Style the image of   main section of Blog

--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
                 <div class="main-blog left-blog1">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Dec 7, 2017</h5>
-                    <div class="blog-img">Image
+                    <div class="blog1-img">Image
                         <img src="./assets/images/lemon1.png">
                     </div>
                     <p>Some text..</p>
@@ -51,8 +51,8 @@
                 <div class="main-blog left-blog2">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog-img">Image
-                        <img src="./assets/images/lemon1.png">
+                    <div class="blog2-img">Image
+                        <img src="./assets/images/aku.jpeg">
                     </div>
                     <p>Some text..</p>
                 </div>
