Fix: main section of the blog page

--- a/blog.html
+++ b/blog.html
@@ -56,34 +56,48 @@
                     </div>
                     <p>Some text..</p>
                 </div>
+            </div>
+            <div class="leftcolumn-blog">
                 <div class="main-blog left-blogcenter">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog-img">Image</div>
+                    <div class="blog3-img">Image
+                        <img src="./assets/images/carrothouse.png">
+                    </div>
                     <p>Some text..</p>
                 </div>
+
                 <div class="main-blog left-blog1">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Dec 7, 2017</h5>
-                    <div class="blog-img">Image</div>
+                    <div class="blog1-img">Image
+                        <img src="./assets/images/face.jpeg">
+                    </div>
                     <p>Some text..</p>
                 </div>
                 <div class="main-blog left-blog2">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog-img">Image</div>
+                    <div class="blog2-img">Image
+                        <img src="./assets/images/loseweifgt.jpg">
+                    </div>
                     <p>Some text..</p>
                 </div>
             </div>
+
             <div class="rightcolumn-blog">
-                <div class="main-blog">
+                <div class="main-blogright">
                     <h2>About Me</h2>
-                    <div class="blog-img">Image</div>
+                    <div class="blog-imgme">Image
+                        <img src="./assets/images/me.jpg">
+                    </div>
                     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
                 </div>
-                <div class="main-blog">
+                <div class="main-blogright">
                     <h3>Popular Post</h3>
-                    <div class="blog-img">Image</div><br>
+                    <div class="blog-img">Image
+                        <img src="./assets/images/aloesmall2.jpg">
+                    </div><br>
                     <div class="blog-img">Image</div><br>
                     <div class="blog-img">Image</div>
                 </div>
@@ -97,24 +111,6 @@
         <div class="footer">
             <h2>Footer</h2>
         </div>
-
-
-        <div class="footer-medias">
-
-            <hr>
-            <a href="https://instagram.com" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-            <a href="https://youtube.com" target="_blank" rel="noopener"
-                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-            <a href="https://facebook.com" target="_blank" rel="noopener"
-                aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-
-            <hr>
-            <p></p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-        </div>
-
 
 
 
