Style the side blog element

--- a/blog.html
+++ b/blog.html
@@ -89,19 +89,23 @@
                 <div class="main-blogright">
                     <h2>About Me</h2>
                     <div class="blog-imgme">Image
-                        <img src="./assets/images/me.jpg">
+                        <img src="./assets/images/meme.jpg">
                     </div>
                     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
                 </div>
                 <div class="main-blogright">
                     <h3>Popular Post</h3>
                     <div class="blog-img">Image
-                        <img src="./assets/images/aloesmall2.jpg">
+                        <img src="./assets/images/omega3.jpg">
                     </div><br>
-                    <div class="blog-img">Image</div><br>
-                    <div class="blog-img">Image</div>
+                    <div class="blog-img">Image
+                        <img src="./assets/images/ageing.jpg">
+                    </div><br>
+                    <div class="blog-img">Image
+                        <img src="./assets/images/stone.jpg">
+                    </div>
                 </div>
-                <div class="main-blog">
+                <div class="main-blogright">
                     <h3>Follow Me</h3>
                     <p>Some text..</p>
                 </div>
