fix : the home page footer

--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
 
                 <h3>Pages</h3>
                 <a href="#">Home</a>
-                <a href="#"> About</a>
                 <a href="#"> Blog</a>
                 <a href="#"> Contact</a>
             </div>
@@ -126,42 +125,44 @@
             <div class="footer-links">
 
                 <h3>Useful links</h3>
-                <a href="#">stack overflow</a>
-                <a href="#"> Accessibility Checkers</a>
-                <a href="#"> Color palette generator</a>
-                <a href="#"> w3school</a>
+                <a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
+                    aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
+                <a href="https://www.freepik.com" target="_blank" rel="noopener"
+                    aria-label="Visit freepik page (opens in a new tab)"> Freepik</a>
+                <a href="https://www.jimdo.com/blog/optimize-website-images-for-better-design-seo" target="_blank"
+                    rel="noopener" aria-label="Visit  color palette page (opens in a new tab)"> optimize
+                    better-design</a>
+
 
             </div>
             <div class="footer-links">
 
                 <h3>Useful links</h3>
-                <a href="#">stack overflow</a>
-                <a href="#"> Accessibility Checkers</a>
-                <a href="#"> Color palette generator</a>
-                <a href="#"> w3school</a>
+                <a href="https://stackoverflow.com/" target="_blank" rel="noopener"
+                    aria-label="Visit stackoverflow page (opens in a new tab)">stack overflow</a>
+                <a href="https://wave.webaim.org" target="_blank" rel="noopener"
+                    aria-label="Visit Acessibilty page (opens in a new tab)"> Accessibility Checkers</a>
+                <a href="https://coolors.co" target="_blank" rel="noopener"
+                    aria-label="Visit  color palette page (opens in a new tab)"> Color palette generator</a>
 
             </div>
         </div>
 
         <div class="footer-media">
-
-            <hr>
-            <a href="https://instagram.com" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-            <a href="https://youtube.com" target="_blank" rel="noopener"
-                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-            <a href="https://facebook.com" target="_blank" rel="noopener"
-                aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-
-<hr>
-                <p></p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+            <div class="media">
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </div>
+            <div class="end">
+                <p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+            </div>
         </div>
-
-
-
-       
     </footer>
     <!---add fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
