--- a/blog.html
+++ b/blog.html
@@ -112,13 +112,15 @@
             </div>
         </div>
 
-        <div class="footer">
-            <h2>Footer</h2>
-        </div>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
 
 
 
-        </footer>
+
         <!---add fontawsone kit--->
         <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
