--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
         <div class="footer-box" id="footer">
             <div class="footer-links footer-about">
 
-                <a href="#default"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
                         alt="Ever Young logo" class="logo-img"></a>
-                <p> Invest in your health. <br> Office Address: No 14 <br> Gronland Street Bremen. <br>---------
+                <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Gronland Street Bremen. <br>---------
                     Germany---------.
                     <br> +49 0152 1403 9314</p>
             </div>
             <div class="footer-links">
 
                 <h3>Pages</h3>
-                <a href="#">Home</a>
-                <a href="#"> Blog</a>
-                <a href="#"> Contact</a>
+                <a href="index.html">Home</a>
+                <a href="blog.html"> Blog</a>
+                <a href="signup.html"> Contact</a>
             </div>
 
             <div class="footer-links">
@@ -137,7 +137,7 @@
             </div>
             <div class="footer-links">
 
-                <h3>Useful links</h3>
+                <h3>Useful links cont..</h3>
                 <a href="https://stackoverflow.com/" target="_blank" rel="noopener"
                     aria-label="Visit stackoverflow page (opens in a new tab)">stack overflow</a>
                 <a href="https://wave.webaim.org" target="_blank" rel="noopener"
@@ -148,22 +148,13 @@
             </div>
         </div>
 
-        <div class="footer-media">
-            <div class="media">
-                <a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-            </div>
-            <div class="end">
-                <p>copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-            </div>
-        </div>
+       
     </footer>
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-google"></a>
+  <a href="#" class="fa fa-linkedin"></a>
+  <a href="#" class="fa fa-youtube"></a>
     <!---add fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
