style the center blog of the blog  section

--- a/blog.html
+++ b/blog.html
@@ -34,74 +34,76 @@
             </nav>
         </header>
         <div class="header-blog">
-            <img src="./assets/images/beachblog2.png">
+            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach">
             <h2>My Blog</h2>
         </div>
+
 
         <div class="row-blog">
             <div class="leftcolumn-blog">
                 <div class="main-blog left-blog1">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Dec 7, 2017</h5>
-                    <div class="blog1-img">Image
-                        <img src="./assets/images/lemon1.png">
+                    <div class="blog1-img">
+                        <img src="./assets/images/lemon1.png" alt="green lemon" class="imag">
+                        <div class="effekt">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
-                    <p>Some text..</p>
                 </div>
                 <div class="main-blog left-blog2">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog2-img">Image
-                        <img src="./assets/images/aku.jpeg">
+
+                    <div class="blog2-img">I
+                        <img src="./assets/images/aku.jpeg" alt="alor vera" class="imagleft">
+                        <div class="effekt">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
-                    <p>Some text..</p>
                 </div>
             </div>
             <div class="leftcolumn-blog">
                 <div class="main-blog left-blogcenter">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog3-img">Image
-                        <img src="./assets/images/carrothouse.png">
+                    <div class="blog3-img">
+                        <img src="./assets/images/carrothouse.png" alt="image of carrot and others" class="imagcenter">
+                        <div class="effekt">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
-                    <p>Some text..</p>
                 </div>
 
                 <div class="main-blog left-blog1">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Dec 7, 2017</h5>
-                    <div class="blog1-img">Image
-                        <img src="./assets/images/face.jpeg">
+                    <div class="blog1-img">
+                        <img src="./assets/images/face.jpeg" alt="a woman face with avocado" class="imag">
+                        <div class="effekt">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
-                    <p>Some text..</p>
                 </div>
                 <div class="main-blog left-blog2">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Sep 2, 2017</h5>
-                    <div class="blog2-img">Image
-                        <img src="./assets/images/loseweifgt.jpg">
+                    <div class="blog2-img">
+                        <img src="./assets/images/loseweifgt.jpg" alt="a woman show weight loss" class="imagleft">
+                        <div class="effekt">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
-                    <p>Some text..</p>
                 </div>
             </div>
 
             <div class="rightcolumn-blog">
                 <div class="main-blogright">
                     <h2>About Me</h2>
-                    <div class="blog-imgme">Image
+                    <div class="blog-imgme">
                         <img src="./assets/images/meme.jpg">
                     </div>
                     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
                 </div>
                 <div class="main-blogright">
                     <h3>Popular Post</h3>
-                    <div class="blog-img">Image
+                    <div class="blog-img">
                         <img src="./assets/images/omega3.jpg">
                     </div><br>
-                    <div class="blog-img">Image
+                    <div class="blog-img">
                         <img src="./assets/images/ageing.jpg">
                     </div><br>
-                    <div class="blog-img">Image
+                    <div class="blog-img">
                         <img src="./assets/images/stone.jpg">
                     </div>
                 </div>
