Add text background markup  to the blog main image and style

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,10 @@
             </nav>
         </header>
         <div class="header-blog">
-            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach">
+            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach" >
+            <div class="text-block">
+                <h2>The Blog <br>Briefcase for your Health <br> Invest in your health<br> Your health, Your Wealth </h2>
+            </div>
             <h2>My Blog</h2>
         </div>
 
