restyle the  resent post part of the Blog page

--- a/blog.html
+++ b/blog.html
@@ -34,11 +34,13 @@
             </nav>
         </header>
         <div class="header-blog">
-            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach" >
+            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach">
             <div class="text-block">
                 <h2>The Blog <br>Briefcase for your Health <br> Invest in your health<br> Your health, Your Wealth </h2>
             </div>
-            <h3>My Blog</h3>
+            <div class="text-b">
+                <h3>Recent Post</h3>
+            </div>
         </div>
 
 
@@ -48,13 +50,16 @@
                     <div class="blog1-img">
                         <img src="./assets/images/lemon1.png" alt="green lemon" class="imag">
                         <div class="effekt">
-                            <div class="text">Hello World</div>
+                            <div class="text">Health benefit of Lemon Juice
+                                juice is a natural cleaner and stain remover.
+                                lemon juice for virus prevention and if  mixed 
+                                with honey and ginger as an effective cold treatment</div>
                         </div>
                     </div>
                 </div>
                 <div class="main-blog left-blog2">
 
-                    <div class="blog2-img">I
+                    <div class="blog2-img">
                         <img src="./assets/images/aku.jpeg" alt="alor vera" class="imagleft">
                         <div class="effekt">
                             <div class="text">Hello World</div>
@@ -62,6 +67,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="leftcolumn-blog">
                 <div class="main-blog left-blogcenter">
                     <div class="blog3-img">
@@ -96,7 +102,9 @@
                     <div class="blog-imgme">
                         <img src="./assets/images/meme.jpg">
                     </div>
-                    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+                    <p>Hi,  I'M Louisa Uju Adimora.. An<br>
+                     IT  Certified Professional. I love<br> Nature.
+                    This is actually my first <br>ever website design fron scrtach.</p>
                 </div>
                 <div class="main-blogright">
                     <h3>Popular Post</h3>
