Add markup for blog testimony and style

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
                         alt="Ever Young logo" class="logo-img"></a>
-                <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Gronland Street Bremen. <br>---------
+                <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Grönland Street Bremen. <br>---------
                     Germany---------.
                     <br> +49 0152 1403 9314</p>
             </div>
