Fix: the link on Social Media on the blog page

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,400;1,900&display=swap"
         rel="stylesheet">
 </head>
+<!--here is the markup for Menu Header and Nav elemnents and logo and the logo is link to Home page-->
 
 <body>
     <div class="menu-header">
         <header>
             <nav>
                 <div class="logo">
-                    <a href="#default"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                    <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
                             alt="Ever Young logo" class="logo-img"></a>
                 </div>
                 <ul>
@@ -32,7 +33,7 @@
                 </ul>
             </nav>
         </header>
-
+        <!-- This section is markup for main body of the site- It has two section left section for the text and right for the image backroung-->
         <section>
             <div class="main">
                 <div class="main-left">
@@ -42,23 +43,22 @@
                         organic means and natural products.
                     </p>
                     <div class="button">
-                        <a href="#" class="btn">read more</a>
+                        <a href="signup.html" class="btn">read more</a>
                     </div>
                 </div>
                 <div class="main-right">
-                    <img src="./assets/images/foodbg-removebg-preview (1).png">
+                    <img src="./assets/images/foodbg-removebg-preview (1).png" alt="an image containing people and fruits">
                 </div>
             </div>
-    </div>
     </section>
-
+<!-- This section is markup for about of the body- It has three segment-->
     <section class="sec-about">
         <h1><strong>About Ever Young</strong></h1>
         <h3> <i>what we do</i></h3>
         <div class="about-wrap">
             <div class="about-1">
                 <div class="about-img">
-                    <img src="./assets/images/meet.jpg" class="image-left">
+                    <img src="./assets/images/meet.jpg" alt=" picture of two women sitting dnow and discussing" class="image-left">
                 </div>
                 <div class="about-right">
                     <h1>We give transparent Advice <br>on health Issues.</h1>
@@ -67,7 +67,7 @@
                         how to do it. At Ever young we ....
                     </p>
                     <div class="button-about">
-                        <a href="#" class="btn-about">read more</a>
+                        <a href="signup.html" class="btn-about">read more</a>
                     </div>
                 </div>
             </div>
@@ -80,16 +80,16 @@
                         blend<br> one or more products.
                     </p>
                     <div class="button-center">
-                        <a href="#" class="btn-about">read more</a>
+                        <a href="signup.html" class="btn-about">read more</a>
                     </div>
                 </div>
                 <div class="about-img-center">
-                    <img src="./assets/images/oraganic prodk1.png" class="image-right-center">
+                    <img src="./assets/images/oraganic prodk1.png" alt=" picture of a joga person surrounded with fruit and vegetable" class="image-right-center">
                 </div>
             </div>
             <div class="about-1">
                 <div class="about-img">
-                    <img id="img3" src="./assets/images/supplement1.jpg" class="image-left">
+                    <img id="img3" src="./assets/images/supplement1.jpg" alt="an image of omega suppliment " class="image-left">
                 </div>
                 <div class="about-right">
                     <h1 id="text3">Supplement your food.</h1>
@@ -98,19 +98,21 @@
                         There are supplement products we recommend....
                     </p>
                     <div class="button-about">
-                        <a href="#" class="btn-about">read more</a>
+                        <a href="signup.html" class="btn-about">read more</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+   <!-- footer section  --> 
     <footer>
         <div class="footer-box" id="footer">
             <div class="footer-links footer-about">
 
                 <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
                         alt="Ever Young logo" class="logo-img"></a>
-                <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Grönland Street Bremen. <br>---------
+                <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Grönland Street Bremen.
+                    <br>---------
                     Germany---------.
                     <br> +49 0152 1403 9314</p>
             </div>
@@ -148,19 +150,18 @@
             </div>
         </div>
 
-       
     </footer>
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-google"></a>
-  <a href="#" class="fa fa-linkedin"></a>
-  <a href="#" class="fa fa-youtube"></a>
-    <!---add fontawsone kit--->
+    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+        aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a>
+    <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+        aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a>
+    <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+        aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
+   
+        <!---fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-
-
-
-
 
 
 </body>
