--- a/signup.html
+++ b/signup.html
@@ -72,12 +72,18 @@
 
 
 
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-youtube"></a>
-    
+    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+        aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a>
+    <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+        aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a>
+    <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+        aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
+   
+        <!---fontawsone kit--->
+    <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+
     <!---add fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
